# pvz_rl

./: .gitignore  README.md  analyze_lastone.py  dddqn2  dddqn2_best  dddqn2_eval_stats.npy  game_render.py  lastone_analysis.json  lastone_analysis.txt  main.py  plot_training_ddqn.py  plot_training_enhanced.py  ppo_vec_agent.pth  pyproject.toml  script_check_cuda_torch.py  script_eval_ddqn_winrate.py  script_evaluate.py  script_feature_importance.py  test_reward_shaping.py  train_acnn_dddqn.py  train_actor_critic_agent.py  train_cnn_dddqn.py  train_cnn_ddqn.py  train_dddqn_agent.py  train_ddqn_agent.py  train_dqn_agent.py  train_policy_agent.py  train_ppo_vec.py  train_ppo_vec_mlx.py
agents/: __init__.py  ac.py  ac_mlx.py  acnn_dddqn_agent.py  acnn_networks.py  actor_critic_agent_v3.py  cnn_dddqn_agent.py  cnn_ddqn_agent.py  cnn_networks.py  dddqn_agent.py  ddqn_agent.py  dqn_agent.py  evaluate_agent.py  keyboard_agent.py  reinforce_agent_v2.py  script_agent.py  threshold.py
agents/agent_zoo/: 1  1_loss  1_real_rewards.npy  test_dddqn  test_dddqn_iterations.npy  test_dddqn_loss  test_dddqn_real_iterations.npy  test_dddqn_real_rewards.npy  test_dddqn_rewards.npy
agents/agent_zoo/1/: 1_iterations.npy  1_real_iterations.npy  1_rewards.npy
agents/agent_zoo/cnn_dddqn_originv2/: cnn_dddqn_originv2_loss  (+5 more)
gym_pvz/: __init__.py
gym_pvz/envs/: __init__.py  position_evaluator.py  pvz_env.py  pvz_env_v01.py  pvz_env_v1.py  pvz_env_v2.py  pvz_env_v3.py  pvz_env_v4.py
pvz/: __init__.py  config.py  grid.py  move.py  reward_config.py  scene.py
pvz/entities/: entity.py
(+39 files in other folders)
