[project]
name = "pvz-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "pygame>=2.6.1",
    "shap>=0.49.1",
    "torch>=2.9.0",
]

[[tool.uv.index]]
name = "阿里云"
url = "https://mirrors.aliyun.com/pypi/simple/"
